# example-sqlalchemy-outbox

./: LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: main.yml
src/: backend.py  inventory.py  main.py  ordering.py  outbox.py  tests.py
